--- a/css/style.css
+++ b/css/style.css
@@ -16,83 +16,109 @@ line-height: 26px;
 .container {
     min-width: 768px;
     max-width: 1200px;
-    margin:0;
+    margin:0 auto;
 }
 .clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
+    content: "";
+    display: table;
+    clear: both;
 }
-
 .main-navigation {   
-   background: url(../img/background_main.jpg) no-repeat center top;
-   min-height: 512px; /*задала min-height вместо padding-top, чтоб поднять меню вверх и сохранить в полном объеме картинку, иначе меню не поднималось. Так нормально?*/
+    background: url(../img/background_main.jpg) no-repeat;
+    min-height: 512px; 
+    width: 100%
 }
+/*у меня основная картинка фона оказывается шире, чем те, котрые лежат ниже. Почему?*/
 .main-navigation ul{
-   
-  margin: 0;
-  padding: 0;
-}
-.main-navigation li{
-    float: left;
-    width: 20%; 
+    margin: 0;
+    padding: 0;
     background-color: white;
     list-style: none;
-   }
-.main-navigation a {
-  display: block;
- padding: 22px 0px;
-    
-  text-decoration: none;
     text-align: center;
+    line-height: 12px;
 }
-a.logo {
-    padding: 0;
-    line-height: 0; /*логотип получилось только так вставить, но получается, что макету не соответствует, так как часть его должна выезжать за белый фон. Что делать?*/
+.main-navigation li:nth-child(1), .main-navigation li:nth-child(2), .main-navigation li:nth-child(3){
+    float: left;
+    width: 20%;    
+   }
+.main-navigation li:nth-child(4), .main-navigation li:nth-child(5) {
+    float: right;
+    width: 20%;    
+   }
+
+ .logo{
+    position: absolute;    
+    top: -21px;
+    left: 50%; 
+     margin-left: -70px;
 }
 
+
+.main-navigation a {
+   display: block;
+   padding: 21px 0px;
+   font-size: 14px;
+   color="#000000"; 
+   text-decoration: none;
+  }
 
 .content {
     margin-top: 60px;
     margin-bottom: 35px;
 }
-.slogan {
-    margin-right: auto;
-    margin-left: auto;
+.slogan {   
     text-align: center; 
-    
     margin-bottom: 35px;
     font-size: 21px;
 }
 .title {
    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
-    font-size: 14px;
+   margin-left: auto;
+   text-align: center;
+   font-size: 14px;
 }
 .illustrated-left {
-     background-color: #81b3d2;
-    text-align: center; /*не понимаю, как мне теперь сдвинуть вниз - "настоящий городок", padding-top двигает и картинку вниз*/
-    }
-
-.illustrated-left img{
-    float: right;
-    width: 66%;
+   background-color: #81b3d2;
+   text-align: center; 
+   
 }
-/*Где и как вставлять картинки еды, сувениров и жилья? После того, как вставлю картинки, отрегулирую текст по строчкам*/
+.illustrated-left h3{
+   padding-top: 56px;
+    
+}
+.illustrated-left img{
+   float: right;
+   width: 67%;  /*Вот комментарий из ТЗ: - Фотографии, занимающие по две трети ширины вставляются так, чтобы обрезаться сверху и снизу при увеличении размера (ширина 66%, высота подстраивается под ширину, чтобы не нарушать пропорций, но фото не выходит за отведённую для него зону). Тут надо задать minheight? или что это значит?*/
+}
+.sedona-view {
+   min-height: 244px; /*сделала отдельный блок для картинки, p и h3, чтобы задать синий цвет до конца картинки. Только теперь не понимаю, как рассчитать minheight для этого блока, по идее он должен соответствовать высоте картинки?? Тогда почему, если я ставлю по высоте картинки -258 px, блок оказывается больше?*/
+   
+}
+
 .icon-description{
     background-color: white;
     list-style: none;
+   
 }
 .icon {
-    float:left;
-    margin-right: 120px;
-    width: 250px;
-    color: black;
+   float:left;
+   margin-right: 120px;
+   padding-top: 163px;
+   width: 250px;
+   color: black;
+ 
 }
 .icon:last-child{
-    margin-right: 0;
-    
+    margin-right: 0;    
+}
+.accommodation {
+    background:#ffffff url(../img/accomodation.png) no-repeat center 62px;
+}
+.food {
+    background:#ffffff url(../img/food.png) no-repeat center 62px;
+}
+.souvenirs {
+    background:#ffffff url(../img/souvenirs.png) no-repeat center 62px; /* у меня почему-то картинка вставляется как будто меньшим размером и из-за этого соотношение всех отступов другое*/
 }
 .illustrated-right {
     background-color: #81b3d2;
@@ -100,19 +126,20 @@ a.logo {
     list-style: none;
     
 }
-
+.illustrated-right h3{
+    padding-top: 50px;
+}
 .illustrated-right img{
     float: left;
-    width: 66%;
-    
-    
+    width: 67%;    
     background-color: #81b3d2;
 }
+
 .reason {
     float:left;
-    
-    width: 33%;
-    background-color: "#eeeeee";
+    min-height: 255px;
+    width: 33.33333%;
+    background-color:#eeeeee;
     list-style: none;
     text-align: center;
    }
@@ -123,19 +150,28 @@ a.logo {
 .reason p {
     font-size: 14px;
 }
+reasons {
+    counter-reset:reason-number;
+}
+.reasons>li {
+    counter-increment: reason-number; 
+}
+
+.reasons>li p::before {
+	content: counter(reason-number); 
+
+	font-style:italic;
+	color:red
+} /*как убрать отображение номеров у жилья еды и сувениров?*/
+
 .interest {
-        margin-right: auto;
+    margin-right: auto;
     margin-left: auto;
     text-align: center;
-    background-color: olivedrab;
+    
     margin-bottom: 35px;
     }
-.booking {
-    width: 570px;
-    padding-bottom: 56px;
-    background-color: lawngreen;
-    
-}
+
 .illustrated {
     line-height: 21px;
     color: white;
@@ -158,10 +194,43 @@ a.logo {
     font-size: 14px;
     line-height: 24px;
 }
+.booking {
+    position: absolute;
+    left: 50%;
+   top: 2084px;
+    margin-left: -284px;
+    width: 568px;
+    background-color: white;
+    font-size: 14px;
+}
+
 .booking h3{
     color: white;
+    background-color: #766357;
+    padding: 35px 135px;
+    font-size: 21px;
 }
-.hotel-description {  
+.booking-form input{ /*Тут не разобралась, как правильно расставить все формы*/
+   width: 345px;
+    margin-bottom: 32px;
+    margin-left: 56px;
+    margin-right: 56px;
+    padding: 16px;
+    background-color: #f2f2f2;
+    font-size: 14px;
+}
+.booking-form input:nth-child(3), .booking-form input:nth-child(4){
+width: 115px;
+}
+.booking-form .btn{
+    clear:both;
+    width: 450px;
+    padding:  17px 195px;
+    margin-bottom: 55px;
+    font-size: 21px;
+    background-color: #81b3d2;
+}
+/*.hotel-description {  
     float: left;
    
     padding-left: 70px;
@@ -181,22 +250,16 @@ a.logo {
 .hotel {
     width: 85px; 
     background-color: mistyrose;
-}
+}*/
 .main-footer {
    margin-top: 50px;
     background-color: chartreuse;
 }
-.footer-contacts {
+.footer-section {
     float: left;
-    width: 33%;
+    width: 33.33333%;
+    text-align: center;
 }
-.footer-social {
-    float: left;
-    width: 33%;
-    
-}
-.footer-copyright {
-    float: left;
-    width: 33%;
-   
-}
+
+
+
