--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ ul, ol, li {
     padding:0;
     list-style-type: none;
 }
+h1, h2,h3 {
+    margin:0;
+    padding: 0;
+}
 .container {
     min-width: 768px;
     max-width: 1200px;
@@ -53,7 +57,12 @@ ul, ol, li {
     float: right;
     width: 20%;    
    }
-
+.main-navigation a:hover {
+    color: #81b3d2;
+}
+.main-navigation a:active {
+    color: #766357;
+}
  .logo{
     position: absolute;    
     top: -21px;
@@ -62,16 +71,13 @@ ul, ol, li {
     width: 140px;
     height: 70px;
 }
-
-
 .main-navigation a {
-   display: block;
-   padding: 21px 0px;
-   font-size: 14px;
-   color:#000000; 
-   text-decoration: none;
+    display: block;
+    padding: 21px 0px;
+    font-size: 14px;
+    color:#000000; 
+    text-decoration: none;
   }
-
 .content {
     margin-top: 60px;
     margin-bottom: 35px;
@@ -82,75 +88,10 @@ ul, ol, li {
     font-size: 21px;
 }
 .title {
-   margin-right: auto;
-   margin-left: auto;
-   text-align: center;
-   font-size: 14px;
-}
-.illustrated-left {
-   background-color: #81b3d2;
-   text-align: center; 
-   
-}
-.illustrated-left h3{
-   padding-top: 56px;
-    
-}
-.illustrated-left p{
-   padding-right: 554px;
-    
-}
-.illustrated-left{
-    
-    box-sizing:border-box;
-    
-    background-color: #81b3d2; 
-    padding-top: 20px; 
-    padding-bottom: 20px; 
-   
-    background-image: url(../img/flowers.jpg); 
-    background-position: right center; 
-    background-repeat: no-repeat; 
-    background-size:66% auto;
-}
-/*Саша, картинка все равно не вставляется как надо. И всё поехало*/
-
-.icon-description{
-    background-color: white;
-    list-style: none;
-   clear:both;
-}
-.icon {
-   float:left;
-  text-align:center;
-   padding-top: 163px;
-   width: 33.3333%;
-   color: black;
- 
-}
-.icon:last-child{
-    margin-right: 0;    
-}
-.accommodation {
-    background-color :#ffffff;
-    background-image: url(../img/accomodation.png);
-    background-repeat: no-repeat;
-    background-position: center 62px;
-   
-   }
-.food {
-    background-color: #ffffff;
-    background-image: url(../img/food.png);
-    background-repeat: no-repeat;
-    background-position: center 62px;
-      
-}
-.souvenirs {
-    background-color: #ffffff;
-    background-image: url(../img/souvenirs.png);
-    background-repeat: no-repeat;
-    background-position: center 62px; 
-     
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    font-size: 14px;
 }
 .reason {
     float:left;
@@ -160,7 +101,6 @@ ul, ol, li {
     list-style: none;
     text-align: center;
 }
-
 .reason:last-child{
     margin-right: 0;
 }
@@ -174,63 +114,137 @@ ul, ol, li {
     counter-increment: reason-number; 
 }
 
-.reasons>li p::before {
-	content: counter(reason-number); 
+.reasons h3 {
+    position: relative;
+}
 
-	font-style:italic;
-	color:red
+/* черточка */
+.reasons>li>h3::before {
+   content: '';
+   display: block;
+   width: 50px;
+   height: 1px;
+   background-color: white;
+   position: absolute;
+   bottom:-24px;
+   left: 178px;
+   z-index: 1;
 } 
+.reasons>li.illustrated-right>h3::before {
+   right:178px;
+   left:auto;
+}
+/*цифра*/
+.reasons>li p::before {
+   content: counter(reason-number);
+   display:block;
+   width:33px;
+   margin:0 auto;
+   background-color:#81b3d2;
+   position:relative;
+   z-index:2;
+} 
+/* .reason - серый блок */
+li.reason>p {
+   color:#979797;
+}
+li.reason>h3::before {
+   margin-bottom:-2px;
+}
+li.reason>p::before {
+   background-color:#eeeeee;
+}
 .reasons .icon p::before {
 	content: ""; 
-
 } 
-
-
-.reasons{
-    padding: 0;
-}
-/*illustrated right я поменяю, когда разберусь с illustrated left*/
-.illustrated-right {
-    background-color: #81b3d2;
-    text-align: center; 
-    list-style: none;
-    
-}
-.illustrated-right h3{
-    padding-top: 50px;
-}
-.illustrated-right img{
-    float: left;
-    width: 67%;    
-    background-color: #81b3d2;
-}
-
-
-
-
 .illustrated {
     line-height: 21px;
     color: white;
+	background-repeat: no-repeat; 
+    background-size:66% auto;
+	text-align: center;    
+    box-sizing:border-box;    
+    background-color: #81b3d2; 
 }
-.illustrated p{
+
+
+
+.illustrated-left{
+    background-image: url(https://raw.githubusercontent.com/Bolshakovaev/165059-sedona/master/img/flowers.jpg); 
+    background-position: right top; 
+}
+.illustrated-right{
+    background-image: url(https://raw.githubusercontent.com/Bolshakovaev/165059-sedona/master/img/mountain.jpg); 
+    background-position: left top; 
+}
+
+.reasons>li p{
     font-size: 14px;
+	padding-bottom: 40px;
+}
+.reasons>li h3{
+   padding-top: 56px;
+   margin:0;
+}
+
+.illustrated-left h3, .illustrated-left p{
+   padding-right: 66%;  	
+}
+.illustrated-right h3, .illustrated-right p{
+   padding-left: 66%;
+}
+.icons{
+   background-color: white;
+   list-style: none;
+   clear:both;
+}
+.icon {
+   float:left;
+   text-align:center;
+   padding-top: 163px;
+   width: 33.3333%;
+   color: black;
+ }
+.icon:last-child{
+    margin-right: 0;    
+}
+.accommodation {
+    background-color :#ffffff;
+    background-image: url(../img/accomodation.png);
+    background-repeat: no-repeat;
+    background-position: center 62px;
+}
+.food {
+    background-color: #ffffff;
+    background-image: url(../img/food.png);
+    background-repeat: no-repeat;
+    background-position: center 62px;
+}
+.souvenirs {
+    background-color: #ffffff;
+    background-image: url(../img/souvenirs.png);
+    background-repeat: no-repeat;
+    background-position: center 62px; 
+}
+.icon{
+    padding-right: 0;
 }
 .icon h3{
     line-height: 21px;
+    padding-right:0;
     }
 .icon p {
     line-height: 21px;
     font-size: 14px;
+    padding-right:0;
 }
 .interest {
     position: relative;
-
     margin-right: auto;
     margin-left: auto;
     text-align: center;
-    
     margin-bottom: 35px;
-    }
+ }
 .interest h2{
     font-size: 30px;
     line-height: 24px;
@@ -243,48 +257,64 @@ ul, ol, li {
     position: absolute;
     left: 50%;
     top: 350px;
-   margin: 0;
+    margin: 0;
     margin-left: -284px;
     width: 568px;
     background-color: white;
     font-size: 14px;
     padding: 0;
 }
-
 .booking h3{
     color: white;
     background-color: #766357;
-   padding: 35px 140px;
+    padding: 35px 140px;
     font-size: 21px;
     margin:0;
+   -webkit-user-select: none; 
+   -moz-user-select: none;
+   -ms-user-select: none; 
+    user-select: none;
+    cursor:pointer;
 }
-
 .booking-form input{ 
-    width: 345px;
-    margin-bottom: 32px;
-    margin-left: 16px;
-    margin-right: 55px;
     padding: 14px 16px;
     background-color: #f2f2f2;
     font-size: 14px;
     font-family:"PT Sans", Arial, serif;
     border: none;
     box-sizing: border-box;
-    text-transform: uppercase;
+    text-transform: uppercase;     
+}
+.booking-form .longinput {
+    width: 345px;
+    margin-bottom: 32px;
+    margin-left: 16px;
+    margin-right: 55px;
     float: right; 
-   clear: right;
-   
+    clear: right;
 }
-/*тут теперь вообще перестала меняться ширина. Последние два инпута должны лежать на одной строке, у меня не получается последний инпут передвинуть на одну строку с предыдущим*/
- .booking-form input:nth-child(3), .booking-form input:nth-child(4){ 
-    
-     width: 115px;
-     
-} 
-.booking-form input:nth-child(4){
-    margin-left: 0;
+
+.booking-form .counter_label {
+    float: left;
 }
-.booking-form .btn{
+.booking-form .counter {
+    float: left;
+    width: 115px;
+    margin: 0;
+}
+
+.booking-form .counter input, .booking-form .counter .minus, .booking-form .counter .plus {
+    width: 40px;
+    display: inline-block;
+}
+
+.booking-form .counter .minus, .booking-form .counter .plus {
+    width: 37.5px;
+}
+ .social-btn .hidden {
+     display: none;
+}
+/*.booking-form .btn{
     clear:both;
     width: 450px;
     padding:  17px 195px;
@@ -296,9 +326,9 @@ ul, ol, li {
 .booking-form label{
     display: block;
     line-height: 75px;
-    margin-left: 55px;
+    /* margin-left: 55px; */
     
-}
+}*//*что это? это надо?*/
 .hotel-choice{
     background-color: #ffffff;
     background-image: url(../img/inner%20background.jpg);
@@ -323,10 +353,7 @@ ul, ol, li {
     
 }
 
-.triangle {
-    width: 85px; 
-    background-color: green;
-}
+
 
 .hotel {
     width: 85px; 
@@ -334,56 +361,84 @@ ul, ol, li {
 }
 .sorting {
     background-color: white;
-    width: 100%;
-    margin-left: 45px;
-} 45+120+35+80+12+35
+    width: 100%; 
+    margin: 0px;
+    padding: 0px;
+    } 
 .sorting-results {
-    float: left;
-    width: 120px;
+    display: inline-block;
+    width: 135px;
     margin-top: 35px;
-    margin-right: 35px;
+    margin-left: 73px;
+    
+    font-size: 21px;
+    line-height: 26px;    
 }
-/*как правильно подобрать размеры в сортировке sorting?*/
+/*как правильно подобрать размеры в сортировке sorting?отправляйся от того, размеры каких блоков, по твоему мнению, фиксированы, какие нет. т.е. что произойдет, если в блоке будет больше текста, куда он пойдет, вправо или вниз? если вправо - то блок можно делать фиксированным по ширине, если вниз, то наоборот. здесь sorting-results, sorting-type и triangles будут, на мой взгляд, иметь фикс-ширину, a sorting-items нет. кстати классы названы так, что не понять, в каком классе что находится  */
 .sorting-type {
-    float: left;
-    width: 80px;
-    margin-left: 12px;
-    margin-right: 35px;
+    display: inline-block;
+    width: 110px;
+    margin-left: 30px;
+   
+    font-size: 12px;
+    line-height: 18px;    
 }
-.sorting-items ul{
-    margin: 0;
-    padding: 0;
-    background-color: white;
+
+.sorting-items {
     list-style: none;
-    text-align: center;
-    line-height: 12px; 
+    display: inline-block;
+    font-size: 12px;
+    line-height: 18px;  
+    margin-left: 7px;
+    margin-right: 605px;
+        
 }
 .sorting-items li{
-    float: left;
-    width: 80px;
+   
     margin-right: 4px;
+   border-bottom: 1px dotted #81b3d2;
+    display: inline-block;
+    vertical-align: top;
 }
 .sorting-items a{
-     display: block;
-   
-   font-size: 14px;
-   color:#000000; 
+   font-size: 12px;
+   color:#b1b1b1;
    text-decoration: none;
 }
-.hotel-results {
-    /*тут как правильно расставить? каждый отдельный класс через флоат?*/
+.sorting-items li.current {
+  color:#81b3d2;/*почему-то не поменялся цвет?*/
+  border-bottom: none;
+} 
+.triangle {
+   float: right;
+    width: 50px; 
+    background-color: green;
+    font-size: 14px;
+    
 }
-.main-footer {
-   margin-top: 50px;
-    background-color: chartreuse;
+triangle a{
+    text-decoration: none;
+    color:#81b3d2; 
 }
-.footer-section {
-    float: left;
-    width: 33.33333%;
-    text-align: center;
+.hotel-choice {
+    background-image: url(../img/inner%20background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    /*background-color: bisque;*/
+    color: white;
+  min-height: 217px;
+}
+.hotel-description {
+   font-size: 16px;
+    line-height: 21px;  
+    padding: 32px 46px;
+}
+.hotel-description label {
+    font-size: 14px;
+    line-height: 21px;  
 }
 .filter-range {
-  position: absolute; /*тут правильно задавать положение этого фильтра через position absolute?*/
+  position: absolute; 
     top: 10px;
     left: 1100px;
     width: 225px;
@@ -391,7 +446,7 @@ ul, ol, li {
 
   color: white;
   text-transform: uppercase;
-    background-color: black;
+    
 }
 
 .filter-range-title {
@@ -522,5 +577,173 @@ ul, ol, li {
 
   background: #ffffff;
 }
+
+
+.hotel-results {
+   width: 100%;
+   background-color: white; /*не понимаю откуда у меня взялся розовый цвет!*/
+}
+.hotel {
+   
+    width: 100%;
+    margin: 0;
+    padding: 30px 73px;
+}
+.hotel a{
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 21px;
+    text-align: center;
+    font-weight: bold;
+}
+.hotel-rating, .stars {
+    float: right;
+    width: 112px;
+  }
+.hotel-rating {
+    background-color: #fafafa;
+    font-size: 14px;
+
+}
+.hotel-picture {
+    float: left;
+    width: 136px;   
+}
+.hotel-name {
+    font-size: 21px;
+    line-height: 26px;
+   display: inline-block;
+   font-weight: bold;
+    vertical-align: top;
+    margin-left: 30px;
+    text-align: left;
+    width: 260px;
+   margin-right: 520px;
+   
+}
+.hotel-name:hover {
+    color: #81b3d2";
+}
+.hotel-price {
+  
+    display: inline-block;    
+   
+    margin-left: 30px;
+    color: #5d5d5d;
+    font-size: 14px;
+    line-height: 21px;
+   
+    
+}
+.accomodation-type {
+    width: 110px;
+    margin-right: 7px;
+}
+.roubles{
+    width: 142px;
+    margin-right: 605px;
+}
+
+
+.hotel-btn {
+    display: inline-block;
+    color: white;
+    margin-left: 30px;
+    margin-right: 705px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+   
+}
+.details {
+     width: 110px;
+   background-color: #81b3d2;
+    margin-left: 30px;
+    margin-right: 7px;
+}
+.details:hover {
+    background-color: #669ec0;
+}
+.book {
+    width: 142px;
+    background-color: #766357;
+}
+.book:hover {
+    background-color: #604e43;
+}
+.main-footer {
+   margin-top: 50px;
+    background-color: chartreuse;
+}
+.footer-section {
+    float: left;
+    width: 33.33333%;
+    text-align: center;
+}
+.social-btn{
+    display: inline-block;
+    vertical-align: top;
+    width: 46px;
+    height: 48px;
+    
+    position: relative;
+    font-size: 0;
+    color: #ffffff;
+    text-align: center;
+}
+.social-btn span{
+    font-size: 19px;
+    background-color: #81b3d2;
+    line-height: 46px;
+}
+
+.social-btn:hover span{
+    background-color: #669ec0; /*что такое down в styleguide?*/
+}
+.footer-copyright:hover {
+    background-color: #669ec0; 
+}
+.footer-copyright:hover img{
+    background-color: #669ec0; 
+}
+
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+
+  font-family: "symbols-sedona";
+  src: url("../fonts/symbols-sedona.woff") format("woff"),
+       url("../fonts/symbols-sedona.woff2") format("woff2");
+}
+
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
+  display: inline-block;
+  width: 1em;
+  margin-right: 0.2em;
+  margin-left: 0.2em;
+
+  font-weight: normal;
+  line-height: 1em;
+  font-family: "symbols-sedona";
+  text-align: center;
+  text-transform: none;
+  text-decoration: inherit;
+  font-style: normal;
+  font-variant: normal;
+
+  speak: none;
+}
+
+.icon-facebook::before { content: "\66"; } /* "f" */
+.icon-twitter::before { content: "\74"; } /* "t" */
+.icon-up-dir::before { content: "\25b2"; } /* "▲" */
+.icon-down-dir::before { content: "\25bc"; } /* "▼" */
+.icon-star::before { content: "\2605"; } /* "★" */
+.icon-check-off::before { content: "\2610"; } /* "☐" */
+.icon-check-on::before { content: "\2611"; } /* "☑" */
+.icon-calendar::before { content: "\e800"; } /* "" */
+.icon-plus::before { content: "\e801"; } /* "" */
+.icon-minus::before { content: "\e802"; } /* "" */
+.icon-youtube::before { content: "\f39e"; } /* "" */
 
 
